source/stylesheets/_forms.sass
@import variables

form, .full-width
  *
    width: 100%

fieldset
  border-radius: $radius
  border: $border-width solid #f5f5f5
  margin: 1em 0
  legend
    font-weight: 400
    padding: 0 0.25em

input, select, textarea
  -webkit-appearance: none
  border-radius: $radius
  border: $border-width solid #ddd
  box-shadow: none
  font-family: $font
  font-size: inherit
  outline: none
  padding: 0.49em 0.5em
  display: block
  &:hover, &:focus
    border-color: $hover
    transition: $all
  &:focus
    box-shadow: 0 0 10px $focus

textarea
  padding: 0.5em

select
  -webkit-appearance: none
  appearance: none
  background-image: image_url('data:image/svg+xml;utf8,<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="512px" height="512px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve"><polyline points="114.3,212.8 388,212.8 251.1,0 114.3,212.8 "/><polyline points="388,297.9 114.3,297.9 251.1,510.7 388,297.9 "/></svg>')
  background-color: white
  background-size: 1em
  background-repeat: no-repeat
  background-position: 99% 50%
  line-height: 1.1
  padding: 0.78em 0.5em
  padding-right: 1.4em

input

  &[type='file']
    background-color: $white
    width: 100%
    font-size: 12px
    padding: 1.02em 0.5em

  &[type='range']
    -webkit-appearance: none
    appearance: none
    padding: 0.870em 0.1em
    &:focus
      outline: 0

  &[type='search']
    box-sizing: border-box !important
    -webkit-appearance: none

  &[type='checkbox'], &[type='radio']
    -webkit-appearance: none
    appearance: none
    background-color: white
    border: $border-width solid #888
    display: inline-block
    height: 1em
    margin: 0 0.3em -0.1em 0
    padding: 0
    position: relative
    top: 0
    width: 1em
    overflow: hidden
    &:checked
      background-color: $link
      border-color: $link
    &:disabled
      opacity: 0.3

  &[type='checkbox']
    border-radius: $radius
    &:checked
      border: none
      &:before
        bottom: 0
        color: white
        content: $font-icons-icon-check
        font-family: $icons
        font-size: 1em
        left: 0
        line-height: 1
        position: absolute
        right: 0
        text-align: center
        top: 0

  &[type='radio']
    border-radius: $round
    &:checked
      &:before
        color: white
        content: ' '
        height: 1em
        overflow: hidden
        position: absolute
        text-align: center
        top: 0
        width: 1em

// Adjustments for iOS Safari

@media screen and (-webkit-min-device-pixel-ratio: 0)

  input:not(.btn), select, textarea
    min-height: 2.7em

  input
    &[type='checkbox'], &[type='radio']
      min-height: 0

// Adjustments to Firefox

@-moz-document url-prefix()

  input
    &[type='file']
      padding: 1.013em 0.5em
    &[type='range']
      border: 0
      margin: 0.6em 0 0 0

  select
    padding: 0.6410em 0.5em
    &:-moz-focusring
      color: transparent
      text-shadow: 0 0 0 #000
      transition: none

